# sec-rag-eval

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.demo  Dockerfile.web  Makefile  README.md  app.js  index.html  pyproject.toml  style.css  web_server.py
.github/workflows/: pages.yml
.streamlit/: config.toml
configs/: v0.yaml  v1.yaml  v1_2.yaml  v2.yaml
demo/: streamlit_app.py
docs/: PROJECT-LOG.md  decisions-and-steps.md  depth-round.md  design-doc.md  session-summary-2026-05-21.md  session-summary-2026-05-29.md  v1-plan.md  versions.md
eval_results/: ablation_chunksize_large_20260627T205004Z.json  ablation_chunksize_local_20260627T181333Z.json  ablation_embed_dims_20260628T124329Z.json  ablation_embedding_local_20260627T185100Z.json  ablation_fusion_20260615T214346Z.json  ablation_rerank_over_large_20260627T191255Z.json  financebench_20260604T011712Z.json  financebench_20260604T022143Z.json  financebench_20260605T020304Z.json  financebench_20260615T210625Z.json  financebench_20260615T212005Z.json  financebench_20260627T012428Z.json  financebench_20260629T160938Z.json  financebench_20260629T193049Z.json
src/sec_rag/: __init__.py  config.py  pipeline.py
src/sec_rag/api/: app.py  schemas.py
src/sec_rag/db/: pool.py  schema.sql
src/sec_rag/edgar/: client.py  live_engine.py
src/sec_rag/eval/: ablation_chunksize_large.py  ablation_chunksize_local.py  ablation_embed_dims.py  ablation_embedding_local.py  ablation_fusion.py  ablation_rerank_over_large.py  diag_retrieval_depth.py  diag_table_parse.py  metrics.py  run_financebench.py
tests/: test_auth.py  test_chunk.py  test_edgar.py  test_embed.py  test_faithfulness.py  test_financebench.py  test_generate_stream.py  test_hybrid.py  test_metrics.py  test_pricing.py  test_rerank.py  test_schemas.py
web/: app.js  index.html  style.css
(+11 files in other folders)
